fix agent capture
